# corepc

./: README.md  notes.md
.github/workflows/: bitreq-lint.yml  bitreq-msrv.yml  bitreq-unit-tests.yml  cron-daily-fuzz.yml  pr-labeler.yml  rust.yaml
bitreq/: Cargo.toml  README.md
bitreq/src/: lib.rs
bitreq/src/connection/: rustls_stream.rs
client/: Cargo.toml
client/src/client_async/: mod.rs
client/src/client_sync/v17/: blockchain.rs
client/src/client_sync/v25/: mod.rs
client/src/client_sync/v26/: mod.rs
client/src/client_sync/v27/: mod.rs
client/src/client_sync/v28/: mod.rs
client/src/client_sync/v29/: mod.rs
integration_test/: Cargo.toml
integration_test/tests/: blockchain.rs  raw_transactions.rs
jsonrpc/: Cargo.toml
jsonrpc/src/: client_async.rs  lib.rs
jsonrpc/src/http/: bitreq_http_async.rs  minreq_http.rs
minreq_modified/: Cargo.toml  README.md
minreq_modified/src/: connection.rs  error.rs  http_url.rs  lib.rs  request.rs  response.rs
node/: Cargo.toml
types/src/: lib.rs
types/src/model/: blockchain.rs  mod.rs
types/src/v17/: generating.rs  mod.rs
types/src/v25/: mod.rs
types/src/v25/blockchain/: error.rs  into.rs  mod.rs
types/src/v26/: mod.rs
types/src/v27/: mod.rs
types/src/v28/: mod.rs
types/src/v29/: mod.rs
verify/src/: main.rs  versioned.rs
