[package]
name = "minreq"
version = "0.1.0"
authors = ["Jens Pitkanen <jens@neon.moe>"]
description = "A modified version of minreq"
readme = "README.md"
license = "ISC"
edition = "2018"


[dependencies]
serde = { version = "1.0.101", optional = true }
serde_json = { version = "1.0.0", optional = true }
log = { version = "0.4.0" }

[package.metadata.docs.rs]
features = ["json-using-serde"]

[features]
json-using-serde = ["serde", "serde_json"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(have_min_max_version)'] }
