[package]
name = "minreq"
version = "0.1.0"
authors = ["Jens Pitkanen <jens@neon.moe>"]
description = "A modified version of minreq"
readme = "README.md"
license = "ISC"
edition = "2018"

[dependencies]
log = { version = "0.4.0" }
serde = { version = "1.0.101", optional = true }
serde_json = { version = "1.0.0", optional = true }

tokio = { version = "1", optional = true, features = ["net", "io-util", "rt"] }
tokio-rustls = { version = "0.25", optional = true, default-features = false, features = ["tls12"] }

[features]
default = ["std"]
std = []
async = ["tokio"]
tls = ["tokio", "tokio-rustls"]
json-using-serde = ["serde", "serde_json"]

[package.metadata.docs.rs]
features = ["json-using-serde"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(have_min_max_version)'] }
